Added worker HTML File

--- a/TrashPickup/TrashPickup/Views/Account/Register.cshtml
+++ b/TrashPickup/TrashPickup/Views/Account/Register.cshtml
@@ -88,10 +88,11 @@
     <div class="form-group">
         @Html.Label("Select user role", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.DropDownList("UserRoles", new SelectList(new[] { "Admin", "User", "Employee" }))
+            @Html.DropDownList("UserRoles", new SelectList(new[] {"User", "Employee" }))
         </div>
     </div>
 
+    //Button
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Submit" />
