--- a/TrashPickup/TrashPickup/Views/Customer/Index.cshtml
+++ b/TrashPickup/TrashPickup/Views/Customer/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@model TrashPickup.Models.Customer
+﻿@*@model TrashPickup.Models.Customer
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Welcome @Model.customerName!</h2>
+<h2>Welcome @Model.Name!</h2>*@
 
 
 
