--- a/TrashPickup/TrashPickup/Views/Worker/Index.cshtml
+++ b/TrashPickup/TrashPickup/Views/Worker/Index.cshtml
@@ -1,9 +1,9 @@
-﻿@model TrashPickup.Models.Worker
+﻿@*@model TrashPickup.Models.Worker
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Welcome @Model.workerName!</h2>
+<h2>Welcome @Model.Name!</h2>*@
 
