page navigation thru roles active

--- a/TrashPickup/TrashPickup/Views/Account/Register.cshtml
+++ b/TrashPickup/TrashPickup/Views/Account/Register.cshtml
@@ -88,7 +88,7 @@
     <div class="form-group">
         @Html.Label("Select user role", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.DropDownList("UserRoles", new SelectList(new[] {"User", "Employee" }))
+            @Html.DropDownList("UserRoles", new SelectList(new[] {"Customer", "Employee", "Admin" }))
         </div>
     </div>
 
