--- a/TrashPickup/TrashPickup/Views/Home/About.cshtml
+++ b/TrashPickup/TrashPickup/Views/Home/About.cshtml
@@ -4,4 +4,13 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Cart Set Out Instructions:
+Carts must be rolled to collection points (alley line or curb line) by 7 AM on designated pickup dates.
+Carts must be 3 feet away from other objects
+Carts must be returned to the storage area by 10 PM. (Scheduled winter pickups for garbage and some recycling routes may be postponed due to winter weather. In this situation, leave the cart(s) at the collection point until emptied.)
+Collection days shift after holidays
+Some residents have their garbage or recyclables collected by an Automated Side Loader (or ASL) truck. If your cart is collected by an ASL truck, in addition to the instructions above, you must make sure the lid opens to the street or alley and the handle is closest to the house. Learn more about ASL collection.
+
+Winter collection months (December - March),
+Guaranteed collection routes. All garbage routes and recycling routes have a scheduled pick up day throughout the winter months. Residents on these routes are responsible for setting out the cart(s) the same as during the summer months. Carts on guaranteed routes will not be collected from storage areas at any time.
+Non-guaranteed recycling collection routes. Some recycling routes do not have guaranteed collection during the winter months. When you look up your schedule online you will see a date range for your collection which falls every 15 - 20 work days. Store your cart in a visible, accessible area with a shoveled, open path. Crews will retrieve the cart from the storage area and empty it. Once emptied, please return the cart to the storage area.</p>
