--- a/TrashPickup/TrashPickup/Views/Customer/Index.cshtml
+++ b/TrashPickup/TrashPickup/Views/Customer/Index.cshtml
@@ -1,12 +1,18 @@
-﻿@*@model TrashPickup.Models
+﻿@model IEnumerable<TrashPickup.Models.ApplicationUser>
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Welcome @Model.Name!</h2>*@
+<h2>Index</h2>
 
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
 
+<h2>Welcome!</h2>
+
+<h4>This is the customer menu.</h4>
 
 
