--- a/TrashPickup/TrashPickup/Views/Customer/Index.cshtml
+++ b/TrashPickup/TrashPickup/Views/Customer/Index.cshtml
@@ -5,54 +5,49 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+
+<h2> Welcome! </h2>
+
+<h4>Customer Menu</h4>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+@Html.ActionLink("View Map", "ViewMap")
 </p>
 
-<h2>Welcome!</h2>
-
-<h4>This is the customer menu.</h4>
-
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.FirstName)
+            First Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LastName)
+            Last Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Address)
+            Adress
         </th>        
         <th>
-            @Html.DisplayNameFor(model => model.AreaCode)
+            Area Code
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserRoles)
+            Role
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DayOfWeek)
+            @Html.DisplayNameFor(model => model.DayOfWeek)           
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            Email
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.EmailConfirmed)
+            Email Confirmed
         </th>        
         <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            Phone Number
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
+            Phone number confirmed
         </th>        
         <th>
-            @Html.DisplayNameFor(model => model.UserName)
+            UserName
         </th>
         <th></th>
     </tr>
@@ -61,7 +56,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
+                modelItem => item.FirstName
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
