--- a/TrashPickup/TrashPickup/Views/Employee/Index.cshtml
+++ b/TrashPickup/TrashPickup/Views/Employee/Index.cshtml
@@ -5,53 +5,45 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-
-<h2>Welcome!</h2>
+<h2>Welcome @Html.DisplayNameFor(model => model.FirstName)!</h2>
 
 <h4>This is the employee menu.</h4>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.FirstName)
+            First Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LastName)
+            Last Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Address)
+            Address
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.AreaCode)
+            Area Code
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserRoles)
+            Role
         </th>
         <th>
             @Html.DisplayNameFor(model => model.DayOfWeek)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            Email
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.EmailConfirmed)
+            Email Confirmed
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            Phone Number
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
+            Phone number confirmed
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserName)
+            Username
         </th>
         <th></th>
     </tr>
