--- a/TrashPickup/TrashPickup/Views/Customer/Index.cshtml
+++ b/TrashPickup/TrashPickup/Views/Customer/Index.cshtml
@@ -1,12 +1,11 @@
 ﻿@model IEnumerable<TrashPickup.Models.ApplicationUser>
-
+@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<h2> Welcome! </h2>
+<h2> Welcome @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().FirstName </h2>
 
 <h4>Customer Menu</h4>
 
@@ -20,7 +19,7 @@
             Last Name
         </th>
         <th>
-            Adress
+            Address
         </th>        
         <th>
             Area Code
@@ -29,7 +28,7 @@
             Role
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DayOfWeek)           
+            Day of Week           
         </th>
         <th>
             Email
@@ -48,49 +47,47 @@
         </th>
         <th></th>
     </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                modelItem => item.FirstName
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>                     
-            <td>
-                @Html.DisplayFor(modelItem => item.AreaCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserRoles)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DayOfWeek)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EmailConfirmed)
-            </td>         
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
-            </td>           
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-    }
+   
+    <tr>
+        <td>
+            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().FirstName
+        </td>
+        <td>
+            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().LastName
+        </td>
+        <td>
+            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().Address
+        </td>
+        <td>
+            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().AreaCode
+        </td>
+        <td>
+            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().UserRoles
+        </td>
+        <td>
+            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().DayOfWeek
+        </td>
+        <td>
+            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().Email
+        </td>
+        <td>
+            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().EmailConfirmed
+        </td>
+        <td>
+            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().PhoneNumber
+        </td>
+        <td>
+            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().PhoneNumberConfirmed
+        </td>
+        <td>
+            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().UserName
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit")
+            @Html.ActionLink("Details", "Details")
+            @Html.ActionLink("Delete", "Delete")
+        </td>
+    </tr>
+    
 
 </table>
