--- a/TrashPickup/TrashPickup/Views/Map/Index.cshtml
+++ b/TrashPickup/TrashPickup/Views/Map/Index.cshtml
@@ -6,18 +6,165 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Google map view of customers</h2>
 
-<div id="googleMap" style="width:100%;height:600px;"></div>
 
-<script>
-function myMap() {
-var mapProp= {
-    center:new google.maps.LatLng(51.508742,-0.120850),
-    zoom:5,
-};
-var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-</script>
+<div id="map" style="width:650px;height:500px;"></div>
+<h2 id="Title">Google map view of customers</h2>
+<head>   
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <style>
+        #Title {
+            font-family: 'Roboto','sans-serif';   
+            font-size: 30px;
+            text-align: left; 
+                  
+        }
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtA7oJhzMM5lb5LZglWfl3yVQfAmSXkiI&callback=myMap"></script>
+        #right-panel {
+            font-family: 'Roboto','sans-serif';
+            font-size: 25px;
+            line-height: 30px;
+            padding-bottom: 10px;
+        }
+
+            #right-panel select, #right-panel input {
+                font-size: 20px;
+            }
+
+            #right-panel select {
+                width: 200%;
+            }
+
+            #right-panel i {
+                font-size: 14px;
+            }
+
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 40px;
+        }
+
+        #map {
+            height: 50%;
+            float: right;
+            width: 30%;
+            height: 50%;
+            padding-top: 100px;
+        }
+
+        #right-panel {
+            margin: 20px;
+            border-width: 2px;
+            width: 20%;
+            height: 300px;
+            float: left;
+            text-align: left;
+        }
+
+        #directions-panel {
+            margin-top: 100px;
+            background-color: #06CEFF;
+            overflow: scroll;
+            height: 300px;
+
+        }
+    </style>
+</head>
+<body>
+    <div id="map"></div>
+    <div id="right-panel">
+        <div>
+            <b>Start:</b>
+
+            <select id="start">
+                <option value="Halifax, NS">Halifax, NS</option>
+                <option value="Boston, MA">Boston, MA</option>
+                <option value="New York, NY">New York, NY</option>
+                <option value="Miami, FL">Miami, FL</option>
+            </select>
+            <br>
+            <b>Waypoints:</b> <br>
+            <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br>
+            <select multiple id="waypoints">
+                <option value="montreal, quebec">Montreal, QBC</option>
+                <option value="toronto, ont">Toronto, ONT</option>
+                <option value="chicago, il">Chicago</option>
+                <option value="winnipeg, mb">Winnipeg</option>
+                <option value="fargo, nd">Fargo</option>
+                <option value="calgary, ab">Calgary</option>
+                <option value="spokane, wa">Spokane</option>
+            </select>
+            <br>
+            <b>End:</b>
+            <select id="end">
+                <option value="Vancouver, BC">Vancouver, BC</option>
+                <option value="Seattle, WA">Seattle, WA</option>
+                <option value="San Francisco, CA">San Francisco, CA</option>
+                <option value="Los Angeles, CA">Los Angeles, CA</option>
+            </select>
+            <br>
+            <input type="submit" id="submit">
+        </div>
+        <div id="directions-panel"></div>
+    </div>
+    <script>
+      function initMap() {
+        var directionsService = new google.maps.DirectionsService;
+        var directionsDisplay = new google.maps.DirectionsRenderer;
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 6,
+          center: {lat: 41.85, lng: -87.65}
+        });
+        directionsDisplay.setMap(map);
+
+        document.getElementById('submit').addEventListener('click', function() {
+          calculateAndDisplayRoute(directionsService, directionsDisplay);
+        });
+      }
+
+      function calculateAndDisplayRoute(directionsService, directionsDisplay) {
+        var waypts = [];
+        var checkboxArray = document.getElementById('waypoints');
+        for (var i = 0; i < checkboxArray.length; i++) {
+          if (checkboxArray.options[i].selected) {
+            waypts.push({
+              location: checkboxArray[i].value,
+              stopover: true
+            });
+          }
+        }
+
+        directionsService.route({
+          origin: document.getElementById('start').value,
+          destination: document.getElementById('end').value,
+          waypoints: waypts,
+          optimizeWaypoints: true,
+          travelMode: 'DRIVING'
+        }, function(response, status) {
+          if (status === 'OK') {
+            directionsDisplay.setDirections(response);
+            var route = response.routes[0];
+            var summaryPanel = document.getElementById('directions-panel');
+            summaryPanel.innerHTML = '';
+            // For each route, display summary information.
+            for (var i = 0; i < route.legs.length; i++) {
+              var routeSegment = i + 1;
+              summaryPanel.innerHTML += '<b>Route Segment: ' + routeSegment +
+                  '</b><br>';
+              summaryPanel.innerHTML += route.legs[i].start_address + ' to ';
+              summaryPanel.innerHTML += route.legs[i].end_address + '<br>';
+              summaryPanel.innerHTML += route.legs[i].distance.text + '<br><br>';
+            }
+          } else {
+            window.alert('Directions request failed due to ' + status);
+          }
+        });
+      }
+    </script>
+
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtA7oJhzMM5lb5LZglWfl3yVQfAmSXkiI&callback=initMap">
+    </script>
+</body>
