Hardcoded routes active

--- a/TrashPickup/TrashPickup/Views/Employee/Index.cshtml
+++ b/TrashPickup/TrashPickup/Views/Employee/Index.cshtml
@@ -10,7 +10,7 @@
 <h4>This is the employee menu.</h4>
 
 <p>
-    @Html.ActionLink("View Map", "Map/Index")
+    @Html.ActionLink("View Map", "MapView")
 </p>
 
 <table class="table">
