--- a/TrashPickup/TrashPickup/Views/Employee/MapView.cshtml
+++ b/TrashPickup/TrashPickup/Views/Employee/MapView.cshtml
@@ -1,24 +1,21 @@
 ﻿@model TrashPickup.Models.ApplicationUser
-
-
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "MapView";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
+<h2>MapView</h2>
 
 <div id="map" style="width:650px;height:500px;"></div>
 <h2 id="Title">Google map view of customers</h2>
-<head>   
+<head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
         #Title {
-            font-family: 'Roboto','sans-serif';   
+            font-family: 'Roboto','sans-serif';
             font-size: 30px;
-            text-align: left; 
-                  
+            text-align: left;
         }
 
         #right-panel {
@@ -64,11 +61,10 @@
         }
 
         #directions-panel {
-            margin-top: 100px;
+            margin-top: 10px;
             background-color: #06CEFF;
             overflow: scroll;
             height: 300px;
-
         }
     </style>
 </head>
@@ -79,30 +75,22 @@
             <b>Start:</b>
 
             <select id="start">
-                <option value="Halifax, NS">Halifax, NS</option>
-                <option value="Boston, MA">Boston, MA</option>
-                <option value="New York, NY">New York, NY</option>
-                <option value="Miami, FL">Miami, FL</option>
+                <option value="6320 McHenry St, Burlington, WI 53105">Burlington, WI</option>
+
             </select>
             <br>
             <b>Waypoints:</b> <br>
-            <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br>
+            <i>(Ctrl+Click or Cmd+Click to set routes)</i> <br>
             <select multiple id="waypoints">
-                <option value="montreal, quebec">Montreal, QBC</option>
-                <option value="toronto, ont">Toronto, ONT</option>
-                <option value="chicago, il">Chicago</option>
-                <option value="winnipeg, mb">Winnipeg</option>
-                <option value="fargo, nd">Fargo</option>
-                <option value="calgary, ab">Calgary</option>
-                <option value="spokane, wa">Spokane</option>
+                <option value="440 Dardis Dr, Burlington, WI 53105">Burlington, WI</option>
+                <option value="539 Rose Ann Dr, Burlington, WI 53105">Burlington, WI</option>
+         
             </select>
             <br>
             <b>End:</b>
             <select id="end">
-                <option value="Vancouver, BC">Vancouver, BC</option>
-                <option value="Seattle, WA">Seattle, WA</option>
-                <option value="San Francisco, CA">San Francisco, CA</option>
-                <option value="Los Angeles, CA">Los Angeles, CA</option>
+                <option value="6320 McHenry St, Burlington, WI 53105">Burlington, WI</option>
+
             </select>
             <br>
             <input type="submit" id="submit">
