--- a/TrashPickup/TrashPickup/Views/Employee/EmployeeCustomersView.cshtml
+++ b/TrashPickup/TrashPickup/Views/Employee/EmployeeCustomersView.cshtml
@@ -8,8 +8,6 @@
 <h2>My Customers</h2>
 
 
-
-
 <table class="table">
     <tr>
         <th>
@@ -23,7 +21,13 @@
         </th>
         <th>
             Area Code
-        </th>       
+        </th>
+        <th>
+            City
+        </th>
+        <th>
+            State
+        </th>
         <th>
             Day of Week
         </th>
@@ -36,31 +40,37 @@
         <th></th>
     </tr>
 
-    @foreach (var person in Model)
+    @foreach (var item in Model)
     {
-    <tr>
-        <td>
-            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().FirstName
-        </td>
-        <td>
-            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().LastName
-        </td>
-        <td>
-            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().Address
-        </td>
-        <td>
-            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().AreaCode
-        </td>     
-        <td>
-            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().DayOfWeek
-        </td>
-        <td>
-            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().Email
-        </td>
-        <td>
-            @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().PhoneNumber
-        </td>
-        <td>
-    </tr>
-    }
 
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AreaCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.State)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DayOfWeek)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+        </tr>
+    }
+</table>
