Empoyee users now filterd by role

--- a/TrashPickup/TrashPickup/Views/Employee/MapView.cshtml
+++ b/TrashPickup/TrashPickup/Views/Employee/MapView.cshtml
@@ -88,6 +88,7 @@
                 <option value="539 Rose Ann Dr, Burlington, WI 53105">539 Rose Ann Dr</option>
                 <option value="134 Conkey St, Burlington, WI 53105">134 Conkey St</option>
                 <option value="335 Park Ave, Burlington, WI 53105">1335 Park Ave</option>
+                <option value="321 Hickory Dr, Burlington, WI 53105">321 Hickory Dr</option>
         
             </select>
             <br>
