--- a/TrashPickup/TrashPickup/Views/Employee/EmployeeCustomersView.cshtml
+++ b/TrashPickup/TrashPickup/Views/Employee/EmployeeCustomersView.cshtml
@@ -27,10 +27,7 @@
         </th>
         <th>
             State
-        </th>
-        <th>
-            Day of Week
-        </th>
+        </th>       
         <th>
             Email
         </th>
@@ -42,7 +39,8 @@
 
     @foreach (var item in Model)
     {
-
+        if (item.UserRoles == "Customer")
+        {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
@@ -61,10 +59,7 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.State)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DayOfWeek)
-            </td>
+            </td>          
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
@@ -72,5 +67,5 @@
                 @Html.DisplayFor(modelItem => item.PhoneNumber)
             </td>
         </tr>
-    }
+        } }
 </table>
