Added customer views

--- a/TrashPickup/TrashPickup/Views/Customer/Index.cshtml
+++ b/TrashPickup/TrashPickup/Views/Customer/Index.cshtml
@@ -9,7 +9,20 @@
 
 <h4>Customer Menu</h4>
 
+<p>
+    @Html.ActionLink("Change Pickup Day", "ChangePickupDay")
+</p>
 
+<p>
+    @Html.ActionLink("View Amount Owed", "ViewAmountOwed")
+</p>
+
+<p>
+    @Html.ActionLink("Set Vacation Day", "SetVacationDay")
+</p>
+
+
+<h2>My Information</h2>
 <table class="table">
     <tr>
         <th>
