Fixed day not pushing to db

--- a/TrashPickup/TrashPickup/Views/Customer/ChangePickupDay.cshtml
+++ b/TrashPickup/TrashPickup/Views/Customer/ChangePickupDay.cshtml
@@ -1,8 +1,9 @@
-﻿
+﻿@model IEnumerable<TrashPickup.Models.ApplicationUser>
+@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "ChangePickupDay";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ChangePickupDay</h2>
+<h2>Change Pickup Day</h2>
 
