--- a/TrashPickup/TrashPickup/Views/Employee/Index.cshtml
+++ b/TrashPickup/TrashPickup/Views/Employee/Index.cshtml
@@ -59,7 +59,7 @@
             Role
         </th>
         <th>
-            Day of Week
+            Day of Pickup
         </th>
         <th>
             Email
@@ -106,7 +106,7 @@
                 @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().EmailConfirmed
             </td>
             <td>
-                @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().PhoneNumber
+                @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().ContactNumber
             </td>
             <td>
                 @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().PhoneNumberConfirmed
