--- a/TrashPickup/TrashPickup/Views/Customer/SetVacationDay.cshtml
+++ b/TrashPickup/TrashPickup/Views/Customer/SetVacationDay.cshtml
@@ -1,8 +1,9 @@
-﻿
+﻿@model IEnumerable<TrashPickup.Models.ApplicationUser>
+@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "SetVacationDay";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>SetVacationDay</h2>
+<h2>Set Vacation Day</h2>
 
