Added AmountOwed and AmountDaysOwed to db

--- a/TrashPickup/TrashPickup/Views/Customer/ViewAmountOwed.cshtml
+++ b/TrashPickup/TrashPickup/Views/Customer/ViewAmountOwed.cshtml
@@ -6,3 +6,6 @@
 }
 
 <h2>Amount Owed</h2>
+
+
+<h4>You owe $@Model.Where(item => item.UserName == User.Identity.GetUserName()).First().AmountOwed.</h4>
