--- a/TrashPickup/TrashPickup/Views/Customer/ChangePickupDay.cshtml
+++ b/TrashPickup/TrashPickup/Views/Customer/ChangePickupDay.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TrashPickup.Models.ApplicationUser>
+﻿@model TrashPickup.Models.RegisterViewModel
 @using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "ChangePickupDay";
@@ -8,6 +8,30 @@
 <h2>Change Pickup Day</h2>
 
 <h4>Type day you would like to have your new scheduled garbage pickup.</h4>
+
+@using (Html.BeginForm("ChangePickupDay", "Customer", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    @Html.AntiForgeryToken()
+    <div class="form-group">
+        @Html.LabelFor(m => m.DayOfWeek, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.DayOfWeek, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="btn btn-default" value="Update" />
+            </div>
+        </div>
+    </div>
+
+}
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
+
+
+
 
 
 
