User can set vacation request

--- a/TrashPickup/TrashPickup/Views/Customer/SetVacationDay.cshtml
+++ b/TrashPickup/TrashPickup/Views/Customer/SetVacationDay.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TrashPickup.Models.ApplicationUser>
+﻿@model TrashPickup.Models.RegisterViewModel
 @using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "SetVacationDay";
@@ -7,3 +7,24 @@
 
 <h2>Set Vacation Day</h2>
 
+<h4>Type number of weeks you would like to skip garpage pickup.</h4>
+
+@using (Html.BeginForm("SetVacationDay", "Customer", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    @Html.AntiForgeryToken()
+    <div class="form-group">
+        @Html.LabelFor(m => m.WeekCounter, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.WeekCounter, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="btn btn-default" value="Update" />
+            </div>
+        </div>
+    </div>
+
+}
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
