--- a/TrashPickup/TrashPickup/Views/Employee/Index.cshtml
+++ b/TrashPickup/TrashPickup/Views/Employee/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Welcome @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().FirstName!</h2>
 
-<h4>This is the employee menu.</h4>
+<h4>Today is @Model.Where(item => item.UserName == User.Identity.GetUserName()).First().CurrentDay.</h4>
 
 <p>
     @Html.ActionLink("View Map", "MapView")
@@ -17,20 +17,9 @@
     @Html.ActionLink("View my Customers", "EmployeeCustomersView")
 </p>
 
-<div id="TableTitle">
-    @Html.Label("Select Current Day", new { @class = "col-md-2 control-label" })
-    <div id="TableTitle">
-        @Html.DropDownList("DayOfWeek", new SelectList(new[] { "Monday", "Tuesday", "Wednesday", "Thursday", "Friday"}))
-    </div>
-</div>
-
-    
-<div class="form-group">
-    <div class="col-md-offset-2 col-md-10">
-        <input type="submit" class="btn btn-default" value="Submit" />
-    </div>
-</div>
-
+<p>
+    @Html.ActionLink("Set Current Day", "SetCurrentDayView")
+</p>
 
 <h2 id="TableTitle">My Information</h2>
 
