Changed Amount Owed to double in db

--- a/TrashPickup/TrashPickup/Views/Employee/EmployeeCustomersView.cshtml
+++ b/TrashPickup/TrashPickup/Views/Employee/EmployeeCustomersView.cshtml
@@ -64,7 +64,7 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
+                @Html.DisplayFor(modelItem => item.ContactNumber)
             </td>
         </tr>
         } }
