--- a/TrashPickup/TrashPickup/Views/Employee/MapView.cshtml
+++ b/TrashPickup/TrashPickup/Views/Employee/MapView.cshtml
@@ -89,6 +89,8 @@
                 <option value="134 Conkey St, Burlington, WI 53105">134 Conkey St</option>
                 <option value="335 Park Ave, Burlington, WI 53105">1335 Park Ave</option>
                 <option value="321 Hickory Dr, Burlington, WI 53105">321 Hickory Dr</option>
+                <option value="368 E Market Str, Burlington, WI 53105">368 E Market St</option>
+                <option value="399 Travellers Run, Burlington, WI 53105">399 Travellers Runr</option>
         
             </select>
             <br>
